# grpc-bridge

./: .gitignore  CONTRIBUTING.md  README.md  build.sh  cross-build.sh  index.html  package.json  pnpm-lock.yaml  setup-dev.ps1  setup-dev.sh  tailwind.config.js  test.py  tsconfig.json
.cargo/: config.toml
.github/workflows/: release.yml
src/: App.tsx  global.css  i18n.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/src/proto_index/: mod.rs  parser.rs  scanner.rs
src/components/: LanguageSwitcher.tsx  ProtoFileTree.tsx  UnaryRequestPanel.tsx
src/components/grpc/configuration/: ConfigurationPanel.tsx  DirectoryTree.tsx  LanguageSwitcher.tsx
src/components/grpc/header/: HeadersPanel.tsx
src/components/grpc/history/: HistoryPanel.tsx
src/components/grpc/request/: ExecuteRequestPanel.tsx  RequestPanel.tsx
src/components/grpc/response/: ResponsePanel.tsx
src/components/ui/: Button.tsx  Card.tsx  Checkbox.tsx  Input.tsx  Select.tsx  Textarea.tsx  ThemeToggle.tsx
src/context/: ThemeContext.tsx
src/locales/: en.json  ja.json  ko.json
src/state/: history.ts  presets.ts  protoFiles.ts  protoRoots.ts  request.ts  services.ts
