[package]
name = "grpc-bridge"
version = "0.0.1"
edition = "2021"

[dependencies]
tauri = { version = "2.0.0", features = ["tray-icon"] }
tokio = { version = "1.38", features = ["rt-multi-thread", "process", "macros", "time", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
directories = "5"
rusqlite = { version = "0.31", features = ["bundled"] }
keyring = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
uuid = { version = "1", features = ["v4", "serde"] }
moka = { version = "0.12", features = ["sync"] }
ignore = "0.4"
notify = "6"
sha2 = "0.10"
tempfile = "3"
regex = "1"
lazy_static = "1"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }
